swap minimal plus sign with svg image to fix alignment problem (#542)

--- a/resources/css/zoom-control.css
+++ b/resources/css/zoom-control.css
@@ -76,8 +76,12 @@
     line-height: 0.66em;
 }
 #zoomControls #zoom-in-button  {
+    justify-content:center;
+    align-items:center;
+    display:flex;
     top: 35px;
 }
+
 
 #zoomControls #center-button {
                 position: relative;
